source/sass/modules/_slider.scss
.slider {
    width: 100%;
    user-select: none;
}
.slider--home,
.slider--enumerated {
    margin-bottom: 80px;
}
.slider--edge {
    letter-spacing: 0px;
}
.slider--paddy {
    @include wrapl();
}
.slider__cap,
.slider__title {
    padding-top: 20px;
    width: 100%;
    max-width: 450px;
    white-space: normal;
}
.slider__pane {
    white-space: nowrap;
    overflow: hidden;
    width: 100%;
    position: relative;
}
.slider__belt {
    transition: transform $base-duration $ease;

    &.is-panning {
        transition: none;
    }
}
.slider__item {
    width: 50vw;
    display: inline-block;
    vertical-align: top;
    cursor: pointer;
    white-space: normal;

    &:not( :first-child ) {
        margin-left: 10vw;

        .slider--edge & {
            margin-left: 0;
        }
    }

    .image,
    .image-wrap {
        pointer-events: none;
    }

    .slider--edge & {
        width: 100vw;
    }

    .slider--paddy & {
        width: 70vw;
    }

    .slider--work & {
        width: 32vw;
    }

    .slider--about & {
        width: 30vw;
        text-align: right;

        @include respond( $break-tablet-medium ) {
            width: 50vw;
        }

        @include respond( $mobile-width ) {
            width: 100%;
        }
    }
}
.slider__navi {
    white-space: nowrap;
    padding-top: 20px;
    text-align: center;
    padding-right: $padding-v;
    padding-left: $padding-v;
    margin: 0 -10px;

    .slider--home &,
    .slider--paddy &,
    .slider--about & {
        text-align: right;
    }
    .slider--work & {
        text-align: right;
        padding-top: 40px;
    }
}
.slider__navi__next {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    transform: scaleX( -1 );
    padding: 0 10px;
}
.slider__navi__prev {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    padding: 0 10px;
}
.slider__navi__curr {
    cursor: pointer;
    display: inline-block;
    vertical-align: middle;
    height: 2px;
    width: 10px;
    background-color: $black;
    transition: width $fast-duration $ease,
                background-color $fast-duration $ease;

    & + .slider__navi__curr {
        margin-left: 10px;
    }

    .is-theme-black & {
        background-color: $white;
    }

    &.is-active {
        width: 20px;
        background-color: $spot;
    }
}



// ABOUT
.slider__person {
    position: relative;
    pointer-events: none;
}
.slider__about {
    position: absolute;
    left: 20px;
    bottom: 40px;
    color: $white;
    text-align: left;

    p {
        padding-top: 10px;
    }
}
.slider__badge {
    padding: 20px;
    position: relative;
    background-color: $spot;
    width: 67%;
    color: $white;
    display: inline-block;
    text-align: left;
    transform: translate3d( 0, -30px, 0 );

    @include respond( $mobile-width ) {
        width: 80%;
    }

    .is-hoverable &:hover .svg--arrow {
        @include arrow-hover();
    }
}
.slider__badge__meta {
    display: flex;
    align-items: center;
    justify-content: flex-start;

    h6 {
        padding-left: 25px;
    }
}
.slider__badge__story {
    h6 {
        padding-top: 20px;
        padding-bottom: 20px;
        font-weight: 600;
        letter-spacing: 1px;
    }
}



// SPLASH
.slider__splash {
    white-space: normal;
    letter-spacing: 0;
    position: absolute;
    left: 0;
    top: 0;
    width: 38.716216216vw;
    z-index: 1;

    @include respond( $break-tablet-medium ) {
        width: 50vw;
    }

    &:before {
        content: attr( data-label );
        @include h6();
        @include wrap();
    }
}
.slider__splash__item {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    padding-top: $padding-1 * 2;
    pointer-events: none;

    p {
        padding-top: $padding-1;
        padding-bottom: $padding-1;
        width: 22.5vw;
    }

    p,
    a,
    h4,
    h5 {
        opacity: 0;
        transform: translate3d( 0, $padding-1, 0 );
        transition: opacity $base-duration $ease,
                    transform $base-duration $ease;
    }

    p {
        transition-delay: 50ms;
    }

    a {
        transition-delay: 100ms;
    }

    &.is-active {
        pointer-events: auto;

        p,
        a,
        h4,
        h5 {
            opacity: 1;
            transform: translate3d( 0, 0, 0 );
        }
    }

    &.is-exit {
        p,
        a,
        h4,
        h5 {
            opacity: 0;
            transform: translate3d( 0, -50%, 0 );
        }
    }
}


.slice--enumerated-slider {
    padding-top: 80px;
    padding-bottom: 80px;
}

.enumerated-slider {
    .slider__splash:before {
        display: none;
    }
    .slider__splash__item {
        padding-top: 0;
        &.is-active:before {
            // display: unset;
            content: attr( data-label );
            @include h6();
        }
        &.is-exit:before {
            display: none;
        }
        h5 {
            margin-top: 20px;
        }
        p {
            width: 100%;
        }
    }

    @include respond( $break-tablet-small ) {
        .slider {
            padding-left: 0;
        }

        .slider__splash {
            position: relative;
            width: 100%;
            height: 285px;
        }
        .slider__splash__item {
            padding-bottom: $padding-1 * 2;
            padding-top: $padding-1 * 4;

            .link {
                margin-top: 30px;
            }
        }
        .slider__splash__item p {
            width: 100%;
        }
        .slider__item {
            width: 100%;
        }
        .slider__pane {
            @include wrap();
        }
        .slider__belt {
            transform: translate3d(calc(-100vw), 0px, 0px);
        }
    }
}

